--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="main.js"></script>
     <script src="categoriesTasks.js"></script>
     <script src="lodash.js"></script> <!-- lo dash-->
+    <link rel="stylesheet" type="text/css" href="main_page.css">
 
 </head>
 <body>
@@ -19,7 +20,11 @@
 <div id="rating_mean"></div>
 <div>ciao</div>
 <div id="reviews_mean"></div>
-
+<div id="installs_mean"></div>
+<div id="prices_mean"></div>
+<div id="sizeMega_mean"></div>
+<div id="dowload-reviews"></div>
+<div id="box-plot"></div>
 
 
 
