--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <div id="installs_mean"></div>
 <div id="prices_mean"></div>
 <div id="sizeMega_mean"></div>
-<div id="dowload-reviews"></div>
+<div id="download-reviews"></div>
 <div id="box-plot"></div>
 
 
