added new dataset

--- a/index.html
+++ b/index.html
@@ -13,18 +13,40 @@
 
 </head>
 <body>
-<h1 id="title"> Google play store data</h1>
+<article id="b">
+    <h1 id="title">Google play store data</h1>
+    <p>In order to address the analysis of the Google Play store, we used a dataset provided on <a href="www.kaggle.com">Kaggle</a></p>
+    <p>First, we cleaned the data by using Python libraries such as <em>Pandas</em> and <em>Numpy</em>. A sample of the dataset is shown below </p>
+    <section id = "csv"></section>
+</article>
 
-<div id="csv"></div>
+<article id = 'intro'>
+    <p>Looking at the rating  histogram we can rapidly see that most of the apps have a rating between 4 and 5</p>
+    <section id="rating_hist"></section>
+</article>
+
+<article id = 'categories'>
+    <h3>Categories Analysis</h3>
+    <p>We can dive into our data to gain more interesting information by looking at the mean of some features grouped by category </p>
+    <p>First, by using a boxplot, we can show how ratings are distributed: </p>
+    <section id="box-plot"></section>
+    <p><strong>Health and Fitness </strong> and <strong> Art and Design</strong> have good performance. On the other hand, application belonging to </p>
+
+</article>
+
+
+<table id="tab-categories">
+    <tr><td></td><td ></td></tr>
+</table>
+
+<div id="reviews_hist"></div>
 <p id="scrivi"></p>
-<div id="rating_mean"></div>
-<div>ciao</div>
 <div id="reviews_mean"></div>
 <div id="installs_mean"></div>
 <div id="prices_mean"></div>
 <div id="sizeMega_mean"></div>
 <div id="download-reviews"></div>
-<div id="box-plot"></div>
+
 
 
 
