--- a/index_ms.html
+++ b/index_ms.html
@@ -11,34 +11,25 @@
     <script src="lodash.js"></script> <!-- lo dash-->
     <script src="ratingsTasks.js"></script>
 
-    <style> .float-graph{
-        float: left ;
-        margin-right : 10px;
-        margin-bottom: 5px;
-        margin-top: 5px;
-        clear: left;
-    }
-    </style>
+
 
 </head>
 <h1>Rating Analysis </h1>
 
 <h2>Rating vs Reviews Analysis </h2>
 <p>
-<div id="rating" class="float-graph"></div>
-djhugfygihouyftyugiojuytugi
+<div id="rating" ></div>
 </p>
 
 <h2>Rating vs Downloads Analysis</h2>
 <p>
-<div id="installs" class="float-graph"></div>
-eyuegyueguyu
+<div id="installs" ></div>
+
 </p>
 
 <h2>Rating vs Price Analysis</h2>
 <p>
-<div id="price"class="float-graph"></div>
-fefefgyuefgyuefyu
+<div id="price"></div>
 </p>
 
 </body>
