added new dataset

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <header>
     <h1 class="title">Google play store data</h1>
 </header>
+<article class="front-page">
 <article id="b">
     <p>In order to address the analysis of the Google Play store, we used a dataset provided on <a href="www.kaggle.com">Kaggle</a></p>
     <p>First, we cleaned the data by using Python libraries such as <em>Pandas</em> and <em>Numpy</em>. A sample of the dataset is shown below </p>
@@ -48,7 +49,7 @@
 <p id="scrivi"></p>
 
 <div id="download-reviews"></div>
-
+</article>
 
 
 
