--- a/index_ms.html
+++ b/index_ms.html
@@ -44,11 +44,8 @@ The analysis of this graphs leads us to the understanding of the relationship be
     heavy apps have better ratings than light apps.
 
 </p>
-    <h3 class="text"><em>Rating vs Version Analysis</em></h3>
-    <p class="text">
-        The analysis of this graphs leads us to the understanding of the relationship between ratings and version.
+    <div id="size"class="image" ></div>
 
-    </p>
-    <div id="version" class="image"></div>
+
 </body>
 </html>
