added new dataset

--- a/first_page/index.html
+++ b/first_page/index.html
@@ -8,48 +8,55 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
     <script src="main.js"></script>
     <script src="categoriesTasks.js"></script>
-    <script src="lodash.js"></script> <!-- lo dash-->
+    <script src="../lodash.js"></script> <!-- lo dash-->
     <link rel="stylesheet" type="text/css" href="main_page.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
 <header>
-    <h1 class="title">Google play store data</h1>
+        <div><h1>Google play store data</h1></div>
 </header>
+
 <article class="front-page">
+
 <article id="b">
-    <p>In order to address the analysis of the Google Play store, we used a dataset provided on <a href="www.kaggle.com">Kaggle</a></p>
-    <p>First, we cleaned the data by using Python libraries such as <em>Pandas</em> and <em>Numpy</em>. A sample of the dataset is shown below </p>
-    <p>Scegli la quantità di dati da mostrare: <input id="data" type="number" min="1" max="50" /></p>
-    <section id = "csv"></section>
+    <p>In order to address the analysis of the Google Play store, we used a dataset provided on <a href="https://www.kaggle.com/lava18/google-play-store-apps">Kaggle</a></p>
+    <p>First, we cleaned the data by using Python libraries such as <em>Pandas</em> and <em>Numpy</em> (View <a href="dataCleaning.html">notebook</a>). A sample of the dataset is shown below </p>
+    <label for="data">Number of rows:</label><input id="data" type="number" min="1" max="50" value="10" /></label>
+    <section style="overflow-x: auto;" id = "csv"></section>
 </article>
 
 <article id = 'intro'>
     <p>Looking at the rating  histogram we can rapidly see that most of the apps have a rating between 4 and 5</p>
-
+    <div class="image" id="rating_hist"></div>
 </article>
+
 
 <article id = 'categories'>
     <h3>Categories Analysis</h3>
     <p>We can dive into our data to gain more interesting information by looking at the mean of some features grouped by category </p>
     <p>First, by using a boxplot, we can show how ratings are distributed: </p>
-    <section id="box-plot"></section>
+    <section class="image boxp" id="box-plot"></section>
     <p><strong>Health and Fitness </strong> and <strong> Art and Design</strong> have good performance. On the other hand, application belonging to </p>
 
 </article>
 
+    <section style="overflow-x:auto;">
+    <table id="tab-categories">
+        <tr><td><section id="reviews_mean"></section></td><td><section id="installs_mean"></section></td></tr>
+        <tr><td><section id="prices_mean"></section></td><td><section id="sizeMega_mean"></section></td></tr>
+    </table>
+    </section>
 
-<table id="tab-categories">
-    <tr><td><section id="reviews_mean"></section></td><td><section id="installs_mean"></section></td></tr>
-    <tr><td><section id="prices_mean"></section></td><td><section id="sizeMega_mean"></section></td></tr>
-</table>
 
-<div id="reviews_hist"></div>
-<p id="scrivi"></p>
+<div id="rating"></div>
 
 <div id="download-reviews"></div>
 </article>
+
+
 
 
 
