--- a/second_page/index_ms.html
+++ b/second_page/index_ms.html
@@ -8,7 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
     <script src="main_ms.js"></script>
     <script src="categoriesTasks.js"></script>
-    <script src="lodash.js"></script> <!-- lo dash-->
+    <script src="../lodash.js"></script> <!-- lo dash-->
     <script src="ratingsTasks.js"></script>
     <link rel="stylesheet" type="text/css" href="main_page.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -25,10 +25,12 @@
 
     <h3 class="text"><em>Rating vs Reviews Analysis</em> </h3>
     <p class="text">
+
         By analyzing the relationship between ratings and reviews it is immediate to notice that the most extreme rating values, like 5 or 1 are based
         on a very small amount of reviews. What is of striking evidence at a first glance is that the highest number of reviews are related to ratings around 4.5. We can also notice
         the that the applications that require some kind of subscription or payment have a smaller amount of reviews and  have mainly positive ratings.
     </p>
+    <button id="show_rating">Show Graph</button>
     <section id="rating"></section>
 
     <h3 class="text"><em>Rating vs Downloads Analysis</em></h3>
@@ -38,6 +40,7 @@
         paid app and that the rating strongly influences the decision of downloading. The curious aspect is that , as in the previous graph, we have a peak of installs around 4.5, and then  we start
         decreasing again. Paid apps follow a similar trend with less installs.
     </p>
+    <button id="show_inst">Show Graph</button>
     <section id="installs"></section>
 
     <h3 class="text"><em>Rating vs Size Analysis</em></h3>
@@ -46,6 +49,7 @@
         heavy apps have better ratings than light apps.
 
     </p>
+    <button id="show_size">Show Graph</button>
     <section id="size"></section>
 
     <h3 class="text"><em>Rating vs Price Analysis</em></h3>
@@ -53,6 +57,7 @@
         The analysis of this graphs leads us to the understanding of the relationship between ratings and price.
 
     </p>
+    <button id="show_price">Show Graph</button>
     <section id="price"></section>
 
 </article>
