Ms graphs and js

--- a/index_ms.html
+++ b/index_ms.html
@@ -6,7 +6,7 @@
     <script src="https://oop.polito.it/js/plotly-latest.min.js"></script>
     <script src="https://oop.polito.it/js/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
-    <script src="main.js"></script>
+    <script src="main_ms.js"></script>
     <script src="categoriesTasks.js"></script>
     <script src="lodash.js"></script> <!-- lo dash-->
     <script src="ratingsTasks.js"></script>
@@ -16,36 +16,45 @@
 
 
 </head>
-    <body>
-    <header>
-        <h1 class="title">Google play store data</h1>
-    </header>
+<body>
+<header>
+    <h1 class="title">Google play store data</h1>
+</header>
+<article class="front-page">
     <h2 class="text"><em><strong>Rating Analysis</strong></em> </h2>
 
     <h3 class="text"><em>Rating vs Reviews Analysis</em> </h3>
-<p class="text">
-By analyzing the relationship between ratings and reviews it is immediate to notice that the most extreme rating values, like 5 or 1 are based
-    on a very small amount of reviews. What is of striking evidence at a first glance is that the highest number of reviews are related to ratings around 4.5. We can also notice
-    the that the applications that require some kind of subscription or payment have a smaller amount of reviews and  have mainly positive ratings.
-</p>
-    <div id="rating" class="image" ></div>
+    <p class="text">
+        By analyzing the relationship between ratings and reviews it is immediate to notice that the most extreme rating values, like 5 or 1 are based
+        on a very small amount of reviews. What is of striking evidence at a first glance is that the highest number of reviews are related to ratings around 4.5. We can also notice
+        the that the applications that require some kind of subscription or payment have a smaller amount of reviews and  have mainly positive ratings.
+    </p>
+    <section id="rating"></section>
 
     <h3 class="text"><em>Rating vs Downloads Analysis</em></h3>
-<p>
-The analysis of this graphs leads us to the understanding of the relationship between ratings and downloads. The objective of this visualization is to understand whether or not
-    people are interested in the rating of applications when it comes to choose which to download. As expected we can state with some accuracy that free apps are installed a lot more than
-    paid app and that the rating strongly influences the decision of downloading. The curious aspect is that , as in the previous graph, we have a peak of installs around 4.5, and then  we start
-    decreasing again. Paid apps follow a similar trend with less installs.
-</p>
-    <div id="installs"class="image" ></div>
+    <p>
+        The analysis of this graphs leads us to the understanding of the relationship between ratings and downloads. The objective of this visualization is to understand whether or not
+        people are interested in the rating of applications when it comes to choose which to download. As expected we can state with some accuracy that free apps are installed a lot more than
+        paid app and that the rating strongly influences the decision of downloading. The curious aspect is that , as in the previous graph, we have a peak of installs around 4.5, and then  we start
+        decreasing again. Paid apps follow a similar trend with less installs.
+    </p>
+    <section id="installs"></section>
+
     <h3 class="text"><em>Rating vs Size Analysis</em></h3>
-<p class="text">
-    The analysis of this graphs leads us to the understanding of the relationship between ratings and size. The objective of this visualization is to understand whether or not
-    heavy apps have better ratings than light apps.
+    <p class="text">
+        The analysis of this graphs leads us to the understanding of the relationship between ratings and size. The objective of this visualization is to understand whether or not
+        heavy apps have better ratings than light apps.
 
-</p>
-    <div id="size"class="image" ></div>
+    </p>
+    <section id="size"></section>
 
+    <h3 class="text"><em>Rating vs Price Analysis</em></h3>
+    <p class="text">
+        The analysis of this graphs leads us to the understanding of the relationship between ratings and price.
 
+    </p>
+    <section id="price"></section>
+
+</article>
 </body>
 </html>
