--- a/firstPage/index.html
+++ b/firstPage/index.html
@@ -23,7 +23,7 @@
 
 <article id="b">
     <p> This is a report based on  <a href="https://www.kaggle.com/lava18/google-play-store-apps">Kaggle</a> dataset about Google play store application.
-    The dataset contained <em>NaN</em>, <em>missing values</em> or <em>invalid strings</em>, therefore we had to clean it first by using Python libraries such as Pandas and Numpy (View <a href="dataCleaning.html">notebook</a>).<br>
+    The dataset contained <em>NaN</em>, <em>missing values</em> or <em>invalid strings</em>, therefore we had to clean it first by using Python libraries such as Pandas and Numpy (View <a href="dataPreprocessing.html">notebook</a>).<br>
     It is possible to see a sample below.
     </p>
     <label for="data">Number of rows:</label><input id="data" type="number" min="1" max="50" value="10" /></label>
