--- a/secondPage/index_ms.html
+++ b/secondPage/index_ms.html
@@ -7,6 +7,7 @@
     <script src="https://oop.polito.it/js/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
     <script src="main_ms.js"></script>
+
     <script src="../lodash.js"></script> <!-- lo dash-->
     <script src="ratingsTasks.js"></script>
     <link rel="stylesheet" type="text/css" href="../style/stylePage.css">
@@ -31,7 +32,8 @@
         the that the applications that require some kind of subscription or payment have a smaller amount of reviews and  have mainly positive ratings.
     </p>
 
-    <section class="image" id="rating"></section>
+    <button id="show_rating">Show Graph</button>
+    <section id="rating"></section>
 
     <h3 class="text"><em>Rating vs Downloads Analysis</em></h3>
     <p>
@@ -40,7 +42,10 @@
         paid app and that the rating strongly influences the decision of downloading. The curious aspect is that , as in the previous graph, we have a peak of installs around 4.5, and then  we start
         decreasing again. Paid apps follow a similar trend with less installs.
     </p>
-    <section class="image" id="installs"></section>
+
+    <button id="show_inst">Show Graph</button>
+    <section id="installs"></section>
+
 
     <h3 class="text"><em>Rating vs Size Analysis</em></h3>
     <p class="text">
@@ -48,7 +53,9 @@
         heavy apps have better ratings than light apps.
 
     </p>
-    <section class="image" id="size"></section>
+
+    <button id="show_size">Show Graph</button>
+    <section id="size"></section>
 
 
     <h3 class="text"><em>Rating vs Price Analysis</em></h3>
@@ -56,11 +63,15 @@
         The analysis of this graphs leads us to the understanding of the relationship between ratings and price.
 
     </p>
+
+    <button id="show_price">Show Graph</button>
     <section  class="image" id="price"></section>
     <form style=" overflow: hidden">
         <input class="next-page-button" type="button" value="Next" onclick="window.location.href='#'" />
         <input class="next-page-button" type="button" value="Back" onclick="window.location.href='../firstPage/index.html'" />
     </form>
+
+
 
 </article>
 </body>
