--- a/secondPage/index_ms.html
+++ b/secondPage/index_ms.html
@@ -33,7 +33,7 @@
     </p>
 
     <button class="buttonGraph" id="show_rating">Show Graph</button>
-    <section id="rating"></section>
+    <section class="imagems" id="rating"></section>
 
     <h3 class="text"><em>Rating vs Downloads Analysis</em></h3>
     <p>
@@ -44,28 +44,30 @@
     </p>
 
     <button class="buttonGraph" id="show_inst">Show Graph</button>
-    <section id="installs"></section>
+    <section class="imagems" id="installs"></section>
 
 
     <h3 class="text"><em>Rating vs Size Analysis</em></h3>
     <p class="text">
         The analysis of this graphs leads us to the understanding of the relationship between ratings and size. The objective of this visualization is to understand whether or not
-        heavy apps have better ratings than light apps.
+        heavy apps have better ratings than light apps. This graph shows with striking evidence that the number of free apps is higher than the number of paid apps. It is also evident how
+        heavy paid apps have high ratings.
 
     </p>
 
     <button class="buttonGraph" id="show_size">Show Graph</button>
-    <section id="size"></section>
+    <section class="imagems" id="size"></section>
 
 
     <h3 class="text"><em>Rating vs Price Analysis</em></h3>
     <p class="text">
-        The analysis of this graphs leads us to the understanding of the relationship between ratings and price.
+        The analysis of this graphs leads us to the understanding of the relationship between ratings and price. By computing a mean for each rating range it is clear that
+        the most expensive apps have a rating between 3.5 and 4. Such result is interesting since we would expect top rated apps to have the highest price.
 
     </p>
 
     <button class="buttonGraph" id="show_price">Show Graph</button>
-    <section  class="image" id="price"></section>
+    <section  class="imagems" id="price"></section>
     <form style=" overflow: hidden">
         <input class="button" type="button" value="Next" onclick="window.location.href='#'" />
         <input class="button" type="button" value="Back" onclick="window.location.href='../firstPage/index.html'" />
