--- a/secondPage/index_ms.html
+++ b/secondPage/index_ms.html
@@ -10,7 +10,7 @@
 
     <script src="../lodash.js"></script> <!-- lo dash-->
     <script src="ratingsTasks.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style/stylePage.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300&display=swap" rel="stylesheet">
 
 
