--- a/firstPage/index.html
+++ b/firstPage/index.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
     <script src="categoriesTasks.js"></script>
     <script src="../lodash.js"></script> <!-- lo dash-->
-    <link rel="stylesheet" type="text/css" href="../style/stylePage.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
