--- a/thirdPage/index_sg.html
+++ b/thirdPage/index_sg.html
@@ -10,7 +10,7 @@
     <script src="thirdPage.js"></script>
     <script src="../lodash.js"></script> <!-- lo dash-->
 
- <link rel="stylesheet" type="text/css" href="../style/stylePage.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300&display=swap" rel="stylesheet">
     <style >
 
