--- a/secondPage/index_ms.html
+++ b/secondPage/index_ms.html
@@ -10,7 +10,7 @@
 
     <script src="../lodash.js"></script> <!-- lo dash-->
     <script src="ratingsTasks.js"></script>
-    <link rel="stylesheet" type="text/css" href="/CSS/style.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:300&display=swap" rel="stylesheet">
 
 
@@ -18,7 +18,7 @@
 </head>
 <body>
 <header>
-    <div><h1 ><a id ='title' href="../firstPage/index.html">Google play store data</a></h1></div>
+    <div><h1 ><a id ='title' href="../index.html">Google play store data</a></h1></div>
 </header>
 
 <article class="front-page">
@@ -70,7 +70,7 @@
     <section  class="imagems" id="price"></section>
     <form style=" overflow: hidden">
         <input class="button" type="button" value="Next" onclick="window.location.href='../thirdPage/index_sg.html'" />
-        <input class="button" type="button" value="Back" onclick="window.location.href='../firstPage/index.html'" />
+        <input class="button" type="button" value="Back" onclick="window.location.href='../index.html'" />
     </form>
 
 
