--- a/thirdPage/index_sg.html
+++ b/thirdPage/index_sg.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <header>
-    <div><h1 ><a id ='title' href="../firstPage/index.html">Google play store data</a></h1></div>
+    <div><h1 ><a id ='title' href="../index.html">Google play store data</a></h1></div>
 </header>
 
 <article class="front-page">
@@ -90,7 +90,7 @@
 
 
 <form style=" overflow: hidden">
-    <input class="button"  type="button" value="Home" onclick="window.location.href='../firstPage/index.html'" />
+    <input class="button"  type="button" value="Home" onclick="window.location.href='../index.html'" />
     <input class="button" type="button" value="Back" onclick="window.location.href='../secondPage/index_ms.html'" />
 </form>
     </article>
